--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Michael Thomas | Website Developer</title>
+    <title>Sonny Sangha | Development</title>
   </head>
 
   <body>
