--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,11 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Sonny Sangha | Development</title>
+    <title>Michael Thomas | Website Developer</title>
   </head>
 
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
+    
     <div id="root"></div>
 
 
